# legal-assistant-databricks

./: .env.example  .gitignore  LICENSE  README.md  app.yaml  manifest.json  mlflow.db  pyproject.toml  requirements-app.txt  requirements.txt  run_local.sh
.claude/: settings.local.json
.cursor/: mcp.json
app/: __init__.py  main.py
docs/: APP_USER_GUIDE.md  BENCHMARK_EVALUATION.md  DEVELOPER_GUIDE.md  NYAYA_SAHAYAK_CHANGES.md  PLAN.md  PLAYGROUND_TO_APP.md  SECURITY.md  UI_design.md  WORKSPACE_SETUP.md
notebooks/: 02_ingest_constitution.py  03_ingest_ipc_full.py  04_ingest_gov_schemes.py  05_mlflow_rag_evaluation.py  build_rag_index.py  india_legal_policy_ingest.py  run_benchmark.py  setup_vector_search.py
src/nyaya_dhwani/: __init__.py  bns_explainer.py  embedder.py  faiss_compat.py  index_builder.py  ipc_bns_compare.py  keyword_boost.py  llm_client.py  manifest.py  mlflow_logger.py  retrieval.py  retriever.py  sarvam_client.py  scheme_checker.py  text_utils.py  vs_retriever.py
tests/: benchmark_questions.json  test_index_faiss.py  test_keyword_boost.py  test_llm_client.py  test_manifest.py  test_retriever.py  test_sarvam_client.py  test_text_utils.py
